@startuml classDiagram
title Model class diagram
scale 0.65

GameManager *-- BankController
GameManager *-- PatronController
GameManager *-- PlayerController
GameManager *-- ShopController

PatronController o-- Patron
Patron o-- TokenArray

BankController o-down- Bank
Bank o-- TokenArray

PlayerController o-- Player
Player o-- TokenArray
Player o-- Hand
Player o-- Patron

ShopController o-- Rank
Rank o-- Hand
Rank o-- Deck

Deck o-- Card
Hand o-- Card

Card o-- TokenArray
TokenArray <.. Color


BankController .r[hidden]. PatronController
PatronController .r[hidden]. PlayerController
PlayerController .r[hidden]. ShopController

Bank .r[hidden]. Patron
Patron .r[hidden]. Player
Player .r[hidden]. Rank


VictoryPoint .r[hidden]. Hand
VictoryPoint -[norank]-* Patron
VictoryPoint -[norank]-* Card
VictoryPoint -[norank]-* Player




class GameManager {
}


class BankController {
}

class PatronController {
}

class PlayerController {
}

class ShopController {
}









class TokenArray {
}


enum Color {
    WHITE
    BLUE
    GREEN
    RED
    BLACK
    GOLD
}

@enduml


